# HyruleToghether

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  buildWPF.py
C#/BOTW.DedicatedServer/: BOTWM.DedicatedServer.csproj  DedicatedServer.cs  Program.cs
C#/BOTW.Logging/: BOTWM.Logging.csproj  Logger.cs
C#/BOTWM.ClientTesting/: BOTWM.ClientTesting.csproj  Program.cs
C#/BOTWM.Server/: BOTWM.Server.csproj  PlatformPaths.cs  Server.cs
CrossPlatform/: MilkBarLauncher-Info.plist  README.md  macos_bundle_launcher.c  milkbar_launcher.py  milkbar_qt_gui.py  patch_BeltLookupGuard.asm  requirements.txt  test_milkbar_launcher.py
DLL/InjectDLL/: BotwEdit.h  BumiiAccess.h  CMakeLists.txt  CharacterClasses.cpp  CharacterDTO.h  Client.cpp  Connectivity.h  DeathSwapDTO.h  EquipmentAccess.h  EquipmentMode.h  EquippedItems.h  Game.h  LittleEndian.h  LocalInstance.h  LocationAccess.h  LoggerService.cpp  LoggerService.h  Memory.h  MessagerService.cpp  ModelData.h  ModelsDTO.h  NamedPipes.cpp  NamesDTO.h  Platform.h  Player.cpp  Player.h  ProjectileAccess.h  ProjectileDTO.h  PropHuntDTO.h  QuestSync.cpp  ReadCemu.cpp  Scanner.cpp  Serialization.cpp  Serialization.h  SpawningVariables.h  Vec3f_Operations.h  dllmain.cpp  dllmain_Functions.cpp  dllmain_Functions.h  dllmain_Variables.h
scripts/: build-bundled-launcher.sh  build-model-builder.sh  build-native.sh  build-server.sh  build-ukmm.sh  install-patched-cemu.sh  patch-actor-delete.py  patch-cemu.sh  patch-equipment-factory.py  patch-spawn-owner.py  patch-ukmm.sh  prepare-linux-client-source.sh  run-gui.sh  setup-cross-platform.sh
(+15 files in other folders)
